# FileBotPy

./: .gitignore  README.md  main.py  pyproject.toml  start-gui.bat
src/filebotpy/: __init__.py  __main__.py  main.py
src/filebotpy/cli/: __init__.py  cmdline.py
src/filebotpy/gui/: __init__.py  app.py  worker.py
src/filebotpy/gui/widgets/: __init__.py  buttons.py  file_list.py  preview.py
src/filebotpy/media/: __init__.py  clutter_filter.py  detector.py  release_info.py  video_quality.py
src/filebotpy/naming/: __init__.py  engine.py  templates.py
src/filebotpy/rename/: __init__.py  action.py  conflict.py
src/filebotpy/similarity/: __init__.py  episode.py  metrics.py  movie.py  series.py
src/filebotpy/web/: __init__.py  models.py  tmdb.py  tvdb.py
